# Enrtopy

./: .gitignore  Entropy.py  README.md  entropy.c  plan.md  pyproject.toml
c_src/: Makefile  entropy_core.c  entropy_core.h  main.c  utils.c
src/entropy/: __main__.py
src/entropy/core/: __init__.py  analyzer.py  generator.py
src/entropy/data/: __init__.py  wordlists.py
src/entropy/ui/: __init__.py  app.py  components.py  theme.py
tests/: test_generator.py
